# mcp_mvp

client/: .env  client.py  pyproject.toml
server/: .env  pyproject.toml  readme.md  server.py  z.md
